# meta-openenv

./: Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
server/: __init__.py  app.py
tasks/: easy.json  hard.json  medium.json
