[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-cleaning"
version = "1.0.0"
description = "OpenEnv-compatible data cleaning environment for agentic RL evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.115.0,<1.0.0",
  "openai>=2.7.2,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "environment", "inference", "models", "test_env"]
packages = ["server"]

[tool.setuptools.package-data]
"*" = ["tasks/*.json", "openenv.yaml"]
